--- a/homework/일기장만들기/diary.html
+++ b/homework/일기장만들기/diary.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>일기보관함 Day04</title>
-    <link rel="stylesheet" href="./day04_일기.css" />
-    <link rel="stylesheet" href="./day07_일기mobile.css" media="849px" />
-    <script src="./day04_일기.js"></script>
+    <title>diary</title>
+    <link rel="stylesheet" href="./diary.css" />
+    <link rel="stylesheet" href="./diary_mobile.css" media="849px" />
+    <script src="./diary.js"></script>
   </head>
   <body>
     <div class="전체화면">
@@ -37,16 +37,38 @@
         <!-- 일기보관함 드롭다운만들기 -->
         <div id="stickyBoxId" class="stickyBox">
           <div id="navBoxDiv" class="navBox">
-            <select id="navSelect" onchange="navFilter(event)">
-              <option>전체</option>
-              <option>행복해요</option>
-              <option>슬퍼요</option>
-              <option>놀랐어요</option>
-              <option>화나요</option>
-              <option>기타</option>
-            </select>
+            <div class="navsearch">
+              <div class="checkDropBox">
+                <input type="checkbox" />
+                <ul class="dropDownMenu" id="navSelect">
+                  <li id="everyting" onclick="navFilter(event)" selected>
+                    <label for="everyting">전체</label>
+                  </li>
+                  <li id="happy" onclick="navFilter(event)">
+                    <label for="happy">행복해요</label>
+                  </li>
+                  <li id="sad" onclick="navFilter(event)">
+                    <label for="sad">슬퍼요</label>
+                  </li>
+                  <li id="surprise" onclick="navFilter(event)">
+                    <label for="surprise">놀랐어요</label>
+                  </li>
+                  <li id="angry" onclick="navFilter(event)">
+                    <label for="angry">화나요</label>
+                  </li>
+                  <li id="different" onclick="navFilter(event)">
+                    <label for="different">기타</label>
+                  </li>
+                </ul>
+              </div>
 
-            <!-- 모달 띄우기 버튼 -->
+              <div class="searchBar">
+                <img src="./CSS&JS 마스터/search_outline_light_m.svg" alt="" />
+                <input type="text" placeholder="검색어를 입력해주세요" />
+              </div>
+            </div>
+
+            <!-- 일기 쓰기 + 모달 띄우기 버튼 -->
             <button class="diaryStart" onclick="modalOpen('modalWrite')">
               <img src="./CSS&JS 마스터/plus_outline_light_m.svg" alt="" />
               일기쓰기
@@ -55,12 +77,16 @@
         </div>
 
         <!-- 사진보관함 드롭다운만들기 -->
-        <div id="imgnavId" class="imgnavPoto">
-          <select id="navSelect" onchange="navFilter(event)">
-            <option>기본</option>
-            <option>가로형</option>
-            <option>세로형</option>
-          </select>
+        <div id="stickyBoxId" class="stickyBox">
+          <div id="imgnavPotoId" class="imgnavDropBox">
+            <input id="navSelect" type="checkbox" onchange="potoDesign(event)">
+            <ul class="dropDownPoto" >
+              <li selected>기본</li>
+              <li>가로형</li>
+              <li>세로형</li>
+            </ul>
+            </input>
+          </div>
         </div>
       </div>
 
@@ -113,11 +139,11 @@
           <div onclick="floatingUp()" id="floatingBtn" class="upBtn">^</div>
         </div>
       </div>
+    </div>
 
-      <!-- footer -->
-      <div id="footerBoxId" class="footerBox">
-        <div class="footerBox02">민지의다이어리</div>
-      </div>
+    <!-- footer -->
+    <div id="footerBoxId" class="footerBox">
+      <div class="footerBox02">민지의다이어리</div>
     </div>
 
     <!-- 전체화면 밖 -->
