[240921] 메인캠프 DAY17 과제

--- a/04-class_quiz/pages/day17-4/index.html
+++ b/04-class_quiz/pages/day17-4/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>리액트 첫날</title>
+    <title>리액트 과제4</title>
     <!-- js다운 -->
     <script
       crossorigin
@@ -17,12 +15,13 @@
     <!-- babel 다운 -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <link rel="stylesheet" href="./index.css" />
+    <!-- css -->
+    <!--     <link rel="stylesheet" href="./App.css" />
+    <link rel="stylesheet" href="./index.css" /> -->
     <script type="text/babel" src="./index.js"></script>
-    <script type="text/babel" src="./components/imgUploadbtn.js"></script>
     <script type="text/babel">
       const root = ReactDOM.createRoot(document.getElementById("root"));
-      root.render(<게시글등록페이지 />);
+      root.render(<App />);
     </script>
   </head>
   <body>
